# nerval

./: .gitignore  LICENCE.txt  README.md  aws-codeguru-reviewer.yml  nerval_jupyter.ipynb  requirements.txt  setup.cfg  setup.py
nerval/: __init__.py  nerval.py
nerval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nerve/: __init__.py
tests/: 01.test_flat_lists.py  02.test_list_of_lists.py  03.test_list_of_nested_lists.py  04.test_IO.py  05.test_BIO1.py  06.test_BIO2.py  07.test_IOE1.py  08.test_IOE2.py  09.test_IOBES.py  10.test_BILOU.py  11.test_BMEWO.py
