[metadata]
name = nerve
version = 0.1.19
author = Mariangela D'Addato
author_email = mariangela.daddato@gmail.com
description = A Python framework to evaluate Named Entity Recognition (NER) models. Entity-level confusion matrix and classification report.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdadda/nerve
project_urls =
    Bug Tracker = https://github.com/mdadda/nerve/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = nerve
packages = find:
python_requires = >=3.6

[options.packages.find]
where = nerve
