[metadata]
name = nerval
version = 1.1.2
author = Mariangela D'Addato
author_email = mdadda.py@gmail.com
description = Entity-level confusion matrix and classification report to evaluate Named Entity Recognition (NER) models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maridda/nerval
project_urls =
    Bug Tracker = https://github.com/maridda/nerval/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude = tests
